feat(wlxx): annotationProcessor java版本